# linnet

./: .env.example  .gitignore  .nfs0000000000bc6a8c00021df0  Dockerfile  README.md  compose.cloud.yml  compose.demo.yml  compose.test.yml  compose.yml  manage.sh  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  tiers.py
app/api/: audio.py  corrections.py  dev.py  events.py  export.py  history.py  samples.py  sessions.py  snapshots.py
app/middleware/: cloud.py  demo.py
app/migrations/: 001_corrections.sql  002_session_snapshots.sql
app/models/: queue_event.py  scene_event.py  service_event.py  session.py  speaker_event.py  tone_event.py  transcript_event.py
app/services/: annotator.py  session_store.py  translator.py
data/: linnet.db
docker/web/: Dockerfile  nginx.cloud.conf  nginx.conf
frontend/: index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.vue
frontend/src/components/: ComposeBar.vue  CorrectionWidget.vue  DevPanel.vue  HistoryStrip.vue  NowPanel.vue
frontend/src/composables/: useAudioCapture.ts  useToneStream.ts  useWakeLock.ts
frontend/src/stores/: session.ts  settings.ts
tests/: conftest.py  test_annotator.py  test_pinning.py  test_profiles.py  test_reaper.py  test_session_lifecycle.py  test_tiers.py  test_tone_event.py
